# se050ard_wallet

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh  requirements.txt  se050_interface.py  wallet.py  wallet_gui.py
include/: se050_wallet.h
src/: se050_wallet.c
